@@ -47,6 +47,8 @@ dpkg (1.16.4) UNRELEASED; urgency=low
     Closes: #674674
   * Fix start-stop-daemon to not follow symlinks when creating pidfiles.
     Thanks to Carsten Hey <carsten@debian.org>. Closes: #675918
+  * Refactor the file locking logic into a new Dpkg::File module, and move
+    the libfile-fcntllock-perl dependency from dpkg-dev to libdpkg-perl.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
